# RustSearch-AS

./: .gitignore  README.en.md  README.md  TODO.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
.trae/documents/: module1-build-and-verification-plan.md  module1-final-completion-plan.md  module1-global-text-search-rust-architecture.md  module1-i18n-plan.md  module1-mvp-completion-plan.md  module1-mvp-intellij-plugin-plan.md  rustsearch-empty-tree-fix.md  rustsearch-fix-plan.md  rustsearch-fix-round2-plan.md  rustsearch-fix-round3-plan.md  rustsearch-fix-round3-remaining.md  rustsearch-ux-layout-optimization.md
rust-search/: Cargo.toml
rust-search/src/: error.rs  lib.rs
rust-search/src/jni/: bridge.rs  convert.rs  mod.rs  result.rs
rust-search/src/search/: config.rs  context.rs  engine.rs  line_kind.rs  matcher.rs  mod.rs  walker.rs
rust-search/src/util/: mod.rs  path.rs  platform.rs
rust-search/tests/: jni_stream_integration.rs  search_integration.rs
src/main/kotlin/com/example/rustsearch/: RustSearchBundle.kt  RustSearchEngine.kt  SearchConfig.kt  SearchException.kt
src/main/kotlin/com/example/rustsearch/action/: RustSearchAction.kt
src/main/kotlin/com/example/rustsearch/service/: RustSearchService.kt
src/main/kotlin/com/example/rustsearch/ui/: RustSearchPanel.kt  RustSearchToolWindowFactory.kt  SearchResultTreeModel.kt
src/main/resources/com/example/rustsearch/: messages.properties  messages_zh_CN.properties
src/main/resources/native/: .gitkeep  librust_search.dylib
