[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"
authors = ["RustSearch-AS"]
description = "高性能全局文本搜索引擎 Rust 核心,通过 JNI 供 IntelliJ 插件调用"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ripgrep 生态核心库(来自 BurntSushi/ripgrep 仓库)
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
regex = "1.10"

# JNI 交互
jni = { version = "0.21", default-features = false, features = ["invocation"] }

# 并发与流式
crossbeam-channel = "0.5"
rayon = "1.8"

# 错误处理
thiserror = "1.0"

# 工具
once_cell = "1.19"
log = "0.4"

# M1:mmap 文件映射,避免重复 I/O 与内存翻倍
# BurntSushi 维护,ripgrep 同生态,license: MIT OR Apache-2.0
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# H1:必须使用 unwind 模式,让 JNI 入口的 catch_unwind 能捕获 panic。
# abort 模式下 catch_unwind 失效,任何 Rust panic 会直接终止 JVM 进程,
# 违反 jni-rs 官方"panic 跨 JNI 边界是 UB"的安全要求。
# 二进制体积增加约 5-10%(unwinding 表),换来 panic 安全。
strip = true

[profile.dev]
# H1:dev 模式同样使用 unwind,确保开发期也能捕获 panic 转为 Java 异常
